fixing text alignment and showing blog content on post page

--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -1,5 +1,9 @@
 // Home with Background
 
+div.intro > p {
+	text-align: left;
+}
+
 .nav-home{
 	position: relative;
 }
